--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 header {
-    background-color: black;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    background-color: teal;
+    padding-top: 30px;
+    padding-bottom: 30px;
     word-spacing: 20px;
     text-align: right;
     padding-right: 200px;
@@ -9,7 +9,9 @@ header {
     position: fixed;
     top: 0;
     left: 0;
+    right: 0;
     width: 95%;
+
 }
 
 
@@ -33,7 +35,7 @@ section {
 }
 
 .nav a:hover {
-    background-color: blue;
+    background-color: black;
 
     padding: 10px;
     border-radius: 10px;
@@ -56,6 +58,8 @@ footer {
     position: fixed;
     left: 40vw;
     bottom: 10px;
+    color: white;
+    font-style: italic;
 }
 
 /* ice cream Images */
@@ -63,13 +67,16 @@ img {
     width: 200px;
     height: 150px;
 
+    transition: transform 0.s;
+    cursor: pointer;
+
 }
 
 
 
 /* Buy Button  */
 button {
-    background-color: blue;
+    background-color: green;
     color: aliceblue;
     padding-left: 20px;
     padding-right: 20px;
@@ -145,4 +152,14 @@ button:hover {
     font-size: 16px;
     margin-bottom: 5px;
 
+}
+
+.image-container:focus img {
+    transform: scale(2);
+    /* Zoom in */
+}
+
+img:active {
+    transform: scale(2);
+    /* Zoom in */
 }
